Fix squished books

--- a/rails/app/assets/stylesheets/application.scss
+++ b/rails/app/assets/stylesheets/application.scss
@@ -53,7 +53,6 @@ img {
 
 .book-image-small {
   margin-top: 10px;
-  max-width: 100px;
   height: 150px;
   width: auto;
 }
